@@ -1,6 +1,9 @@
 Incompatible RVM update (Coda client)
 -------------------------------------
 
+2008/02/06 RVM version 39
+    Move store identifier from per-volume to global rvg struct.
+
 2005/06/07 RVM version 38
     Added realm::realmid (as we can't use &realm_object on 64-bit systems)
 
